# vexy-json

./: .clippy.toml  .cursorrules  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  PLAN.md  README.md  RELEASE_GUIDE.md  TODO.md  VERSIONING.md  WORK.md  WORKFLOW_IMPROVEMENTS.md  build-temp.sh  build-warnings.txt  build.err.txt  build.rs  build.sh  build.short.txt  debug_double_decimal.rs  debug_iterative_array  debug_iterative_array.rs  debug_lazy_test  debug_lazy_test.rs  debug_lexer_tokens  debug_lexer_tokens.rs  debug_test  debug_test2  debug_test2.rs  debug_test3.rs  debug_test4  debug_test5  debug_test5.rs  debug_test7.rs  debug_test8  debug_test8.rs  deny.toml  grep.txt  (+15 more)
.github/: dependabot.yml
Formula/: README.md  vexy-json.rb  vexy_json.rb
_github/: README.md  dependabot.yml
bench-data/: README.md
benches/: benchmark.rs  comparison.rs  comprehensive_comparison.rs  lexer_microbenchmarks.rs  memory_benchmarks.rs  parser_comparison.rs  parser_microbenchmarks.rs  parsing.rs  performance_comparison.rs  profiling.rs  real_world_benchmarks.rs  simd_benchmarks.rs  stack_overflow_test.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: basic_usage.py  config_parser.py
bindings/python/src/: lib.rs
bindings/python/src/vexy_json/: __init__.py
bindings/python/tests/: test_vexy_json.py
crates/c-api/: Cargo.toml  README_CPP.md  build.rs
crates/c-api/examples/: Makefile  cpp_example.cpp
crates/c-api/include/: vexy_json.h  vexy_json.hpp
crates/c-api/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/core/: BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_V2.md  Cargo.toml  ERROR_RECOVERY_FIX.md  PHASE_2_COMPLETION_SUMMARY.md  benchmark_results_v2.txt  final_benchmark_results.txt  new_benchmark_results.txt
crates/core/benches/: parser_benchmarks.rs
crates/core/examples/: advanced_repair.rs  error_reporting.rs
crates/core/src/: lib.rs  parallel.rs  parallel_chunked.rs  repair.rs
crates/core/src/ast/: builder.rs  mod.rs  token.rs  value.rs  visitor.rs
crates/core/src/error/: ml_patterns.rs  mod.rs  recovery_v2.rs  repair.rs  reporter.rs  result.rs  span.rs  terminal.rs  types.rs  utils.rs
crates/core/src/error/recovery/: context.rs  mod.rs  strategies.rs
crates/core/src/lazy/: array.rs  mod.rs  number.rs  object.rs  string.rs
crates/core/src/lexer/: debug_lexer.rs  fast_lexer.rs  logos_lexer.rs  mod.rs
crates/core/src/optimization/: benchmarks.rs  memory_pool.rs  memory_pool_v2.rs  memory_pool_v3.rs  mod.rs  simd.rs  string_parser.rs  value_builder.rs  zero_copy.rs
crates/core/src/parser/: array.rs  boolean.rs  iterative.rs  mod.rs  null.rs  number.rs  object.rs  optimized.rs  optimized_v2.rs  optimized_v3.rs  recursive.rs  state.rs  string.rs
crates/core/src/plugin/: mod.rs
crates/core/src/plugin/plugins/: comment_preservation.rs  custom_number.rs  datetime.rs  mod.rs  schema_validation.rs
crates/core/src/repair/: advanced.rs
crates/core/src/streaming/: event_parser.rs  lexer.rs  mod.rs  ndjson.rs  simple_lexer.rs
crates/core/src/streaming/buffered/: buffer.rs  lexer.rs  mod.rs  state.rs
crates/core/src/transform/: mod.rs  normalizer.rs  optimizer.rs
crates/core/tests/: error_recovery_test.rs  memory_pool_optimization_test.rs  ml_integration_test.rs  ml_pattern_test.rs  pattern_recovery_test.rs  recovery_engine_test.rs  streaming_buffered_test.rs  streaming_parser_test.rs
crates/python/: Cargo.toml  README.md  build.rs  pyproject.toml  test1.json  test2.json
crates/python/python/vexy_json/: __init__.py  __init__.pyi  py.typed
crates/python/src/: lib.rs
crates/python/tests/: test_basic.py  test_typing.py  test_vexy_json.py
crates/wasm/: Cargo.toml  test.mjs
crates/wasm/src/: lib.rs
docs/: .htaccess  404.html  Gemfile  RESTRUCTURE_SUMMARY.md  _config.yml  _headers  build-status.md  contributing.md  demo.html  developer-guide.md  development.md  features-overview.md  feedback.md  index.html  index.md  migration-guide.md  plugin-development.md  plugin-registry.md  release-notes.md  release-process.md  sitemap.xml  tool.html  tool.md  troubleshooting.md  usage.md  vexy_json-tool.md  wasm.md  web-tool.md
docs-src/: index.md
examples/: debug_comma_one.rs  debug_comma_one_tokens.rs  debug_comment_tokens.rs  debug_implicit_array.rs  debug_lookahead.rs  debug_test.rs  debug_trailing_comma.rs  parser_comparison.rs  plugin_examples.rs  profile_parser.rs  recursive_parser.rs  simple.rs  streaming_example.rs  test_comment.rs  test_comment_with_value.rs  test_implicit_array.rs  test_implicit_objects.rs  test_inline_comment.rs  test_number_types.rs  test_single_brace.rs  test_single_quote.rs  test_unquoted.rs  trace_comment_parse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: comments.rs  json_structure.rs  numbers.rs  repair.rs  streaming.rs  strings.rs  unicode.rs  unquoted_keys.rs
issues/: 100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  110.txt  120.txt  121.txt  200.txt  600.txt  601.txt  602.txt  610.txt  611.txt
oss-fuzz/: Dockerfile  README.md  build.sh  project.yaml
scripts/: build-deliverables.sh  build-wasm.sh  build.sh  cross-browser-test.js  dev-workflow.sh  get-version.sh  package-lock.json  package-macos.sh  package.json  performance-monitor.js  pre-release-check.sh  release-github.sh  release.sh  release.sh.backup  remove_jsonic_refs.sh  remove_jsonic_refs_targeted.sh  test-version-system.sh  update-versions.sh  verify_features.js
src/: lib.rs
src_docs/: mkdocs.yml
tests/: advanced_features.rs  basic_tests.rs  comma_handling.rs  comment_handling.rs  compat_tests.rs  comprehensive_tests.rs  error_handling.rs  feature_tests.rs  forgiving_features.rs  lexer_tests.rs  lib_integration.rs  newline_as_comma.rs  number_formats.rs  property_tests.proptest-regressions  property_tests.rs  real_world_scenarios.rs  string_handling.rs  supported_features.rs  test_dot_numbers.rs  test_full_parse.rs  test_implicit.rs  test_parse.rs  test_point_zero.rs  test_positive_numbers.rs  test_rust_parse.rs  (+2 more)
(+229 files in other folders)
