[workspace]
resolver = "2"
members = [
"crates/core",
"crates/cli",
"crates/wasm",
"crates/serde",
"crates/test-utils",
"crates/c-api",
"crates/python"
]
exclude = [ "bindings/python", "fuzz" ]


[package]
name = "vexy_json"
version = "2.2.3"
edition = "2021"
description = "A forgiving JSON parser that accepts non-standard JSON formats"
license = "MIT OR Apache-2.0"
repository = "https://github.com/twardoch/pub/vexy_json"
homepage = "https://github.com/twardoch/pub/vexy_json"
keywords = [ "json", "parser", "forgiving", "relaxed", "lenient" ]
categories = [ "parsing", "data-structures", "web-programming" ]


[dependencies.vexy_json-core]
path = "crates/core"


[dependencies.vexy_json-serde]
path = "crates/serde"
optional = true


[features]
default = [ "serde" ]
serde = [ "vexy_json-serde" ]


[dev-dependencies]
proptest = "1.0"
serde_json = "1.0"
chrono = "0.4"
rustc-hash = "2.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"


[dev-dependencies.criterion]
version = "0.5"
features = [ "html_reports" ]


[[bench]]
name = "parsing"
harness = false


[[bench]]
name = "simd_benchmarks"
harness = false


[[bench]]
name = "comparison"
harness = false


[[bench]]
name = "comprehensive_comparison"
harness = false


[[bench]]
name = "profiling"
harness = false


[[bench]]
name = "performance_comparison"
harness = false


[[bench]]
name = "lexer_microbenchmarks"
harness = false


[[bench]]
name = "parser_microbenchmarks"
harness = false


[[bench]]
name = "memory_benchmarks"
harness = false


[[bench]]
name = "real_world_benchmarks"
harness = false


[profile.release]
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
