[package]
name = "vexy_json-python"
version = "1.5.5-dev"
edition = "2021"
authors = [ "Adam Twardoch <adam+github@twardoch.com>" ]
license = "MIT OR Apache-2.0"
description = "Python bindings for vexy_json - a forgiving JSON parser"
repository = "https://github.com/vexyart/vexy-json"
keywords = [ "json", "parser", "forgiving", "repair", "python" ]
categories = [ "encoding", "parser-implementations" ]


[lib]
name = "vexy_json"
crate-type = [ "cdylib" ]


[dependencies]
pythonize = "0.23"
serde_json = "1.0"


[dependencies.vexy_json-core]
path = "../../crates/core"
version = "2.0.0"


[dependencies.pyo3]
version = "0.23"
features = [ "extension-module" ]


[build-dependencies]
pyo3-build-config = "0.23"
