[package]
name = "vexy-json-cli"
version = "1.0.9"
edition = "2021"


[[bin]]
name = "vexy-json"
path = "src/main.rs"


[dependencies]
rayon = "1.7"
colored = "2.0"
thiserror = "2.0"
notify = "6.0"
dirs = "5.0"


[dependencies.vexy-json-core]
path = "../core"


[dependencies.clap]
version = "4.0"
features = [ "derive" ]


[dependencies.tokio]
version = "1.0"
features = [ "full" ]


[dependencies.serde]
version = "1.0"
features = [ "derive" ]


[features]
cli = [ ]
