[package]
name = "vexy-json-cli"
version = "1.5.10"
edition = "2021"


[[bin]]
name = "vexy-json"
path = "src/main.rs"


[dependencies]
rayon = "1.7"
colored = "3.0"
thiserror = "2.0"
notify = "8.1"
dirs = "6.0"


[dependencies.vexy-json-core]
path = "../core"


[dependencies.clap]
version = "4.0"
features = [ "derive" ]


[dependencies.tokio]
version = "1.0"
features = [ "full" ]


[dependencies.serde]
version = "1.0"
features = [ "derive" ]


[features]
cli = [ ]
