[package]
name = "vexy-json-python"
version = "1.5.5-dev"
edition = "2021"
description = "Python bindings for vexy_json - a forgiving JSON parser"
repository = "https://github.com/vexyart/vexy-json"
license = "MIT OR Apache-2.0"
authors = [ "Adam Twardoch <adam+github@twardoch.com>" ]


[lib]
name = "vexy_json"
crate-type = [ "cdylib" ]


[dependencies]
rustc-hash = "2.1"


[dependencies.pyo3]
version = "0.25"
features = [ "extension-module" ]


[dependencies.vexy-json-core]
path = "../core"


[build-dependencies]
pyo3-build-config = "0.25"
