[package]
name = "vexy-json-wasm"
version = "1.5.3"
edition = "2021"
description = "WebAssembly bindings for vexy_json - a forgiving JSON parser"
repository = "https://github.com/vexyart/vexy-json"
license = "MIT OR Apache-2.0"
authors = [ "Adam Twardoch <adam+github@twardoch.com>" ]


[lib]
crate-type = [ "cdylib" ]
path = "src/lib.rs"


[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"


[dependencies.serde]
version = "1.0"
features = [ "derive" ]


[dependencies.vexy-json-core]
path = "../core"
features = [ "serde" ]


[features]
wasm = [ ]
